Fri Dec 26 22:34:16 2003  Tim Janik  <timj@gtk.org>

	* beast-gtk/bstapp.[hc]: added midi-import action.

	* beast-gtk/bstfiledialog.[hc]: added midi-import file dialog.

Sun Dec 28 05:07:08 2003  Tim Janik  <timj@gtk.org>

	* beast-gtk/gxk/gxkparam.c: protect parameter from change notification
	during GUI updates. (fixes option menus changing object properties
	seemingly randomly).

Tue Dec 23 06:06:54 2003  Tim Janik  <timj@gtk.org>

	* beast-gtk/bstprocedure.c: fixed minor GUI quirks.

Tue Dec 23 05:22:09 2003  Tim Janik  <timj@gtk.org>

	* beast-gtk/bstprocedure.c: use proc->help instead of proc->blurb (which
	is gone now).

	* library/scripts/record-midi.scm:
	* library/scripts/modules2grid.scm:
	* library/scripts/progressor-example.scm:
	* library/scripts/song-parts-operations.scm: introduced options field
	and switched category position to unify field order with plugins.

	* tests/Makefile.am: build plugin as lib_LTLIBRARIES, so it can actually
	be loaded (is a proper .so file).

	* tests/cxxbinding.cc: added a bunch of cleanups. added plugin procedure
	test. actually error out if things fail.

	* tests/testplugin.cc: implemented test_exception() procedure.

	* tests/testplugin.idl: declare test_exception() procedure, added
	test enum.

Mon Dec 22 23:59:03 2003  Tim Janik  <timj@gtk.org>

	* beast-gtk/bstsnetrouter.c: don't show unstable plugins without
	--devel.

	* beast-gtk/bstmain.c: changed --devel description somewhat.

	* beast-gtk/bstutils.[hc]: added bst_action_list_from_cats_pred(),
	a variant to bst_action_list_from_cats() which allowes for a custom
	predicate to filter cetgories.

Mon Dec 22 19:52:16 2003  Tim Janik  <timj@gtk.org>

	* beast-gtk/gxk/gxkgadget.[hc]: 
	* beast-gtk/gxk/gxkgadgetfactory.[hc]: s/GxkGadgetOpt/GxkGadgetArgs/.

Mon Dec 22 00:49:05 2003  Tim Janik  <timj@gtk.org>

	* beast-gtk/bstwaveview.c: added missing tooltips.

	* tests/Makefile.am: create the testplugin via noinst_LTLIBRARIES,