@@ -1,3 +1,10 @@
+Sun Dec 28 07:04:42 2003  Tim Janik  <timj@gtk.org>
+
+	* beast-gtk/gxk/gxkdialog.c (gxk_dialog_key_press_event): exploiting a
+	bug on linux wrg symbol exports, give precedence to unmodified
+	accelerators by using _gtk_window_activate_key(), this needs to be fixed
+	to become portable again, once gtk exposes _gtk_window_activate_key().
+
 Fri Dec 26 22:34:16 2003  Tim Janik  <timj@gtk.org>
 
 	* beast-gtk/bstapp.[hc]: added midi-import action.
